# web_scrape

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  LOGGING_GUIDE.md  LOGGING_QUICK_REFERENCE.md  PIPELINE_GUIDE.md  RAILWAY_DEPLOY.md  README.md  api_server.py  docker-compose.yml  execution_guide.md  extract_data.py  full_dump.sql  main.py  mapper.md  migration_add_legend_to_graph.sql  migration_peptide_graph.sql  pyproject.toml  railway.json  requirements.txt  scraped_result.txt  structure_data.md  structured.md  sync.py  sync_supabase.sh  test_graph_sync.py  test_sync.py  verify_mappers.py  verify_refactor.py  viz_server.py
.cursor/plans/: peptide_name_normalization_fix_ba144510.plan.md
docs/: graph_analysis.md  mapper.md  mapping_analysis.md  sync_field_mapping.md
docs/features/: 01-scrape.md  02-sync.md  03-evaluation.md  04-fastapi-schedule-operations.md
graph/: README.md  analysis_script.py  graph_data.json  scraper.py  visualizer.py
graph/visualization/: index.html  script.js  styles.css
log5/: debug_log.txt
src/: config.py  data_summary.py  log_setup.py  read_data.py
src/core/: job_queue.py  models.py  scheduler.py
src/evaluation/: __init__.py  csv_expectation_builder.py  db_actual_fetcher.py  evaluation_engine.py  graph_evaluator.py  reporter.py  runner.py
src/extractors/: base.py  community.py  graph.py  hero.py  quick_guide.py  section.py
src/infrastructure/: csv_storage.py  db_manager.py  webdriver_factory.py
src/mappers/: __init__.py  base.py  base_mapper.py  db_import_orchestrator.py  peptide_mapper.py  (+3 more)
(+62 files in other folders)
