[project]
name = "web-scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair==4.2.2",
    "fastapi>=0.136.1",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.12",
    "selenium>=4.40.0",
    "streamlit>=1.19.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.47.0",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
